[metadata]
# replace with your username:
name = pyUnicodeSteganography
version = 0.0.1
author = Graham Thompson
author_email = grahamwt42@gmail.com
description = Experimental unicode steganography package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grahamwthompson/pyUnicodeSteganography
project_urls =
    Bug Tracker = https://github.com/grahamwthompson/pyUnicodeSteganography/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
